--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -1,20 +1,26 @@
 {{Stub}}
 The '''CFLAGS''' and '''CXXFLAGS''' variables are passed on to the compiler and contains architecture information, compiler optimizations and logging- and failure levels.
 
-The CFLAGS and CXXFLAGS variables content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, this variable is set in {{path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses these CFLAGS entries.
+The CFLAGS and CXXFLAGS variables content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, this variable is set in {{Path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses these CFLAGS entries.
 
-{{File|/etc/portage/make.conf||<pre>CFLAGS="-march=native -O2 -pipe"
-CXXFLAGS="${CFLAGS}"</pre>}}
+{{File|/etc/portage/make.conf||<pre>
+CFLAGS="-march=native -O2 -pipe"
+CXXFLAGS="${CFLAGS}"
+</pre>}}
 
 For development and quality control purposes, this variable can instruct the compiler to add debug information to the generated binaries. A typical setting would then be:
 
-{{File|/etc/portage/make.conf||<pre>CFLAGS="-march=native -O2 -pipe -ggdb -frecord-gcc-switches"
- CXXFLAGS="${CFLAGS}"</pre>}}
+{{File|/etc/portage/make.conf||<pre>
+CFLAGS="-march=native -O2 -pipe -ggdb -frecord-gcc-switches"
+CXXFLAGS="${CFLAGS}"<
+/pre>}}
 
-For Intel Core i7 cpu users or those having econf error during install, (with the current 2012.1 release of Gentoo which ships with GCC 4.5.3 compiler) it is recommended to begin your install with the -march=core2 CFLAG to generate a base install against GCC 4.5.3, then later you can upgrade GCC to 4.6.3 or newer in order to support the new CFLAG -march=corei7. Below is the recommended setting to begin with for corei7 users:
+For Intel Core i7 cpu users or those having econf error during install, (with the current 2012.1 release of Gentoo which ships with GCC 4.5.3 compiler) it is recommended to begin your install with the -march=core2 CFLAG to generate a base install against GCC 4.5.3, then later you can upgrade GCC to 4.6.3 or newer in order to support the new CFLAG -march=corei7. Below is the recommended setting to begin with for Core i7 users:
 
-{{File|/etc/portage/make.conf||<pre>CFLAGS="-march=core2 -O2 -pipe"
-CXXFLAGS="${CFLAGS}"</pre>}}
+{{File|/etc/portage/make.conf||<pre>
+CFLAGS="-march=core2 -O2 -pipe"
+CXXFLAGS="${CFLAGS}"
+</pre>}}
 
 == See also ==
 * [http://www.gentoo.org/doc/en/gcc-optimization.xml Gentoo Compilation Optimization Guide]
@@ -23,4 +29,4 @@ CXXFLAGS="${CFLAGS}"</pre>}}
 == External resources ==
 * [http://www.gnu.org/software/gcc/onlinedocs GCC Online Documentation] on GNU.org
 
-[[Category:Core system]]
+[[Category:Portage]]
