--- a/Arch_testing_guide.mw
+++ b/Arch_testing_guide.mw
@@ -8,14 +8,13 @@ This article assumes that the reader passed the Arch Tester (AT) quiz; knows the
 The system used for arch testing should be considered stable, this does not mean that tree must be ''stable'' though.
 
 Recommended tools are:
-
 {| class="wikitable"
 |-
 ! Name !! Description !! How-to-use
 |-
 | tatt || arch testing tool || [https://github.com/tom111/tatt/blob/master/manual.org tatt's manpage]
 |-
-| eix || useful utilities for package searching || [http://en.gentoo-wiki.com/wiki/Eix eix on unofficial wiki]
+| eix || useful utilities for package searching || [http://en.gentoo-wiki.com/wiki/Eix Community Gentoo Wiki article]
 |-
 | ccache || compiler cache || [http://linux.die.net/man/1/ccache ccache's manpage]
 |}
@@ -29,9 +28,7 @@ LDFLAGS="${LDFLAGS} -Wl,--hash-style=gnu
 FEATURES="test collision-protect"
 </pre>
 
-{{Note |<nowiki>
-FEATURES=test may be redundant if you plan to use tatt.
-</nowiki>}}
+{{Note|FEATURES{{=}}test may be redundant if you plan to use tatt.}}
 
 Other useful flags are ''GFLAGS="-g3 -ggdb"'' and ''USE="debug"''. These are, however, only meant to be used on a per package basis in case you can (and want to) provide nice bug reports and show some love to developers.
 
@@ -43,11 +40,10 @@ Repoman checks ebuilds for common mistakes (hey, maintainers are people too). Ru
 <todo> Another thing to do is to remove unneeded die checks in EAPI-4 functions <insert more info here with relevant links>.
 
 === tatt ===
-app-portage/tatt is simple tool that creates automated test suite that attempts to emerge package with various use-flag combinations. Packages are emerged multiple times so ccache may be very useful and having FEATURES=test is a bad idea time-wise.
+{{Package|app-portage/tatt}} is simple tool that creates automated test suite that attempts to emerge package with various use-flag combinations. Packages are emerged multiple times so ccache may be very useful and having FEATURES=test is a bad idea time-wise.
 
 Example usage (using bug number):
-{{RootCmd |tatt -b 423987
-|output=<pre>
+{{RootCmd|tatt -b 423987|output=<pre>
 Bugnumber:  423987
 Stabilization bug detected.
 Jobname: gimps
@@ -59,43 +55,35 @@ Commit script written to gimps-commit.sh
 </pre>}}
 
 This command will generate 4 scripts in your current directory:
-{{Cmd |ls
-|output= sylpheed-cleanup.sh  sylpheed-commit.sh  sylpheed-rdeps.sh  sylpheed-success.sh  sylpheed-useflags.sh
-}}
+{{Cmd|ls|output=<pre>
+sylpheed-cleanup.sh  sylpheed-commit.sh  sylpheed-rdeps.sh  sylpheed-success.sh  sylpheed-useflags.sh
+</pre>}}
 
-{{RootCmd | sh sylpheed-useflags.sh}}
+{{RootCmd|sh sylpheed-useflags.sh}}
 ''-useflags.sh'' will batch emerge package with different USE flags to make sure everything is ok.
 Test results are written to {{Path|./<pkg>.report}}.
 
-{{RootCmd | sh sylpheed-rdeps.sh }}
+{{RootCmd|sh sylpheed-rdeps.sh}}
 ''-rdeps.sh'' will reemerge rdeps.
 
-{{RootCmd | sh sylpheed-cleanup.sh}}
+{{RootCmd|sh sylpheed-cleanup.sh}}
 ''-cleanup.sh'' will remove keyword from {{Path|/etc/portage/package.keywords/archtest}} and created scripts.
 
-{{Note
-|tatt assumes that package.keywords is a directory, if you have this as a file instead, it will not work. The fix is intuitive: backup your package.keywords, create a directory with this name instead, and place your backup in it.
-}}
+{{Note|tatt assumes that {{Path|package.keywords}} is a directory, if you have this as a file instead, it will not work. The fix is intuitive: backup your {{Path|package.keywords}}, create a directory with this name instead, and place your backup in it.}}
 
-For further information about tatt's usage, please read
-[https://github.com/tom111/tatt/blob/master/manual.org tatt's manpage].
+For further information about tatt's usage, please read [https://github.com/tom111/tatt/blob/master/manual.org tatt's manpage].
 
 === rdep checking ===
-Ago
-[http://www.gossamer-threads.com/lists/gentoo/dev/246347#246347%20 provided]
-a simple shell script that utilizes scanelf (''app-misc/pax-utils'') and qlist (''app-portage/portage-utils'') to check for rdeps:
-
-{{File|/usr/local/bin/rdepscan||
-<pre>
+Ago [http://www.gossamer-threads.com/lists/gentoo/dev/246347#246347%20 provided] a simple shell script that utilizes scanelf ({{Package|app-misc/pax-utils}}) and qlist ({{Package|app-portage/portage-utils}}) to check for rdeps:
+{{File|/usr/local/bin/rdepscan||<pre>
 #!/bin/bash
 qlist -e "$@" | xargs scanelf -L -n -q -F '%n #F' | tr , ' ' | xargs qfile -Cv
 | sort -u | awk '{print $1}' | uniq
 </pre>}}
-{{Note| Some dependencies are covered in an ebuild by inherited eclasses, glibc and such. These are to be ignored.}}
+{{Note|Some dependencies are covered in an ebuild by inherited eclasses, glibc and such. These are to be ignored.}}
 
 A similar script that uses portage files can be used to see deps on per-exectuable basis:
-{{File|/usr/local/bin/rdepscan2||
-<pre>
+{{File|/usr/local/bin/rdepscan2||<pre>
 #!/bin/sh
 if [ $# -eq 0 ]; then echo "expects package atom as first argument" >&2; exit; fi
 find /var/db/pkg -regex ".*$(echo "$@" | sed 's@=@@g').*\\/NEEDED" | xargs cat
@@ -111,7 +99,7 @@ Naturally, some programs are harder to test than others (sci-chemistry/..). The 
 Sometimes it may be hard to even find an executable. In that case the above script "rdepscan2" may be useful as it also prints executables installed by package.
 
 Always run tests in a console, and check for any warnings or errors.
-{{Warning | Before reporting any bug, make sure it wasn't reported already by other people.}}
+{{Warning|Before reporting any bug, make sure it wasn't reported already by other people.}}
 
 === Libraries ===
 Libraries are generally hard to test, main thing here is to make sure library compiles fine with various useflags (if present) and that test phase finishes fine.
@@ -119,14 +107,14 @@ New versions often adds unstable or broken new features, but stable (=older) use
 It's a good idea to make sure stuff in userspace does not break with updated lib, to see what packages depend on a library that is being tested use equery:
 
 These are generally rather hard to test, as a new library version may have added ''broken features'' that ATs have no chance to catch by using programs that use the library, as new ''features'' are rarely implemented ahead of time in current stable user-space.
-{{Cmd |equery depends <library name>}}
+{{Cmd|equery depends <library name>}}
 
 Reemerging dependencies is not a bad idea either, thought this isn't always needed (be extra careful with static-libs).
-{{Note |Maintainers often add 'todo checklist' for ATs in stabilisation bug.}}
+{{Note|Maintainers often add 'todo checklist' for ATs in stabilisation bug.}}
 
 == Bug reporting ==
-=== Gentoo bugzilla ===
 
+=== Gentoo bugzilla ===
 Gentoo bugzilla is used to report testing results. A typical message would look like:
 <pre> amd64 : ok (builds, runs) </pre>
 Maintainers sometimes tell what to test within the bug, sometimes they don't. As an AT you are free to test the way you like, however it's a good idea to tell others what was tested and what was not, in your bugzilla report message.
@@ -137,15 +125,16 @@ If anything goes wrong, it's up to the AT to find out what's wrong, and help fix
 * edit stabilization bug (add blocker)
 * unless this is an ebuild-related bug or regression caused by Gentoo supplied patches, report on upstream bugzilla
 
-=== upstream bugzilla ===
-{{Note |This is the primary way how things get fixed. Do not skip this one!}}
+=== Upstream bugzilla ===
+{{Note|This is the primary way how things get fixed. Do not skip this one!}}
 This is where you report any failures during compilation, test phase or usage. It's a good idea to read
-[http://www.chiark.greenend.org.uk/~sgtatham/bugs.html How to report bugs effectively] first though.<br />
+[http://www.chiark.greenend.org.uk/~sgtatham/bugs.html How to report bugs effectively] first though.
+
 To make things simpler, link reports on both bugzillas. Also don't forget to drop some means of communication, as a developer or maintainer may contact you asking for further tests or logs.
 
 == Not sure? ==
 If you are not sure about anything, feel free to ask an irc (irc.freenode.net) in ''#gentoo-dev channel'' (or sub-channels like ''#gentoo-dev-amd64''...).
-{{Warning| Stuff happens, improperly tested package can cause damage to users or gentoo name (be praised). If you think you can't test package, don't do it, eventually some other AT will test it or determine stability by heuristics (dice roll, goat sacrifice... :))}}
+{{Warning|Stuff happens, improperly tested package can cause damage to users or gentoo name (be praised). If you think you can't test package, don't do it, eventually some other AT will test it or determine stability by heuristics (dice roll, goat sacrifice... :))}}
 
 == See also ==
 * [[Stabilization request]]
