--- a/VMware_Player.mw
+++ b/VMware_Player.mw
@@ -1,37 +1,29 @@
-VMware Player is a closed source freeware virtualization solution with a feature set similar to [[VirtualBox]] and [[KVM]].  Its only significant advantage (which is increasing less relevant) is that unlike VirtualBox and KVM, it can emulate a 64-bit guest without virtualization extensions in the processor (VT-x / AMD-V).  Additional features are offered in VMware's enterprise alternative, [[VMware Workstation]] (also installable via Portage).
+'''VMware Player''' is a closed source freeware virtualization solution with a feature set similar to [[VirtualBox]] and [[KVM]]. Its only significant advantage (which is increasing less relevant) is that unlike VirtualBox and KVM, it can emulate a 64-bit guest without virtualization extensions in the processor (VT-x / AMD-V). Additional features are offered in VMware's enterprise alternative, [[VMware Workstation]] (also installable via Portage).
 
-==Installation==
-
-<code>app-emulation/vmware-player</code> like many binaries is frequently not marked stable, so must be unmasked by running, for example:
-
-{{rootCmd|<nowiki>emerge --autounmask-write =vmware-player-4.0.3.703057 && dispatch-conf && emerge =vmware-player-4.0.3.703057</nowiki>}}
+== Installation ==
+{{Package|app-emulation/vmware-player}} like many binaries is frequently not marked stable, so must be unmasked by running, for example:
+{{RootCmd|emerge --autounmask-write {{=}}vmware-player-4.0.4.744019-r1 && dispatch-conf && emerge {{=}}vmware-player-4.0.4.744019-r1}}
 
 For more information on unmasking such packages, see [[Knowledge Base:Accepting a keyword for a single package]].
 
+== Configuration ==
 As Portage will inform you, it must be configured to use networking:
+{{Emerge|params+=--config|vmware-player}}
 
-{{rootCmd|emerge --config vmware-player}}
+Some modules from {{Package|app-emulation/vmware-modules}} must be loaded. Start VMware services and load modules:
+{{RootCmd|/etc/init.d/vmware start}}
 
-Some modules from <code>app-emulation/vmware-modules</code> must be loaded (<code>emerge -n portage-utils && qlist -e vmware-modules</code> to view all):
+Run '''rc-update add vmware''' to optionally have load on boot.
 
-Start VMware services and load modules:
-
-{{rootCmd|/etc/init.d/vmware start}}
-
-Run <code>rc-update add vmware default</code> to optionally have load on boot.
-
-Add user to <code>vmware</code> group:
-
-{{rootCmd|gpasswd -a yourUser vmware}}
-
+Add user to ''vmware'' group:
+{{RootCmd|gpasswd -a YOURUSER vmware}}
 The simplest way to have this group applicable is to log out and back in.
 
 Running it:
+{{Cmd|/opt/vmware/bin/vmplayer}}
 
-{{cmd|/opt/vmware/bin/vmplayer}}
+== GNOME dependencies ==
+Despite hard [[RDEPEND]] on {{Package|gnome-base/libgtop}}, {{Package|gnome-base/orbit}} and {{Package|x11-libs/libgksu}} in recent ebuilds, these dependencies can be removed in a local [[overlay]] copy and the application will still install and function.
 
-==GNOME dependencies==
-
-Despite hard [[RDEPEND]] on <code>gnome-base/libgtop</code>, <code>gnome-base/orbit</code>, & <code>x11-libs/libgksu</code> in recent ebuilds, these dependencies can be removed in an [[overlay]] copy and the application will still install and function.
-
-[[category:virtualization]]
+[[Category:Virtualization]]
+[[Category:Binary kernel modules]]
