--- a/Council_decisions.mw
+++ b/Council_decisions.mw
@@ -14,5 +14,5 @@ This page intends to provide a quick summary of all decisions which were done by
 * Old-style virtuals are not allowed in the tree. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20110608-summary.txt 06/2011 meeting]
 * ChangeLogs entries are to be used in all situations. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20110510-summary.txt 05/2011 meeting]
 * Developers are encouraged to use the latest EAPI in ebuilds. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20110308-summary.txt 03/2011 meeting]
-
-<!-- note: I have reviewed the summaries up to 01/2011, you can start from there -->
+* ''.la'' files should be removed. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20101026-summary.txt 10/2010 meeting]
+<!-- note: I have reviewed the summaries up to 01/2010, you can start from there -->
