--- a/Council_decisions.mw
+++ b/Council_decisions.mw
@@ -15,4 +15,5 @@ This page intends to provide a quick summary of all decisions which were done by
 * ChangeLogs entries are to be used in all situations. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20110510-summary.txt 05/2011 meeting]
 * Developers are encouraged to use the latest EAPI in ebuilds. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20110308-summary.txt 03/2011 meeting]
 * ''.la'' files should be removed. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20101026-summary.txt 10/2010 meeting]
+* The ebuild tree must provide an upgrade path to a stable system that hasn't been updated for one year. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20091109-summary.txt 11/2009 meeting]
 <!-- note: I have reviewed the summaries up to 01/2010, you can start from there -->
