--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -12,8 +12,8 @@ For development and quality control purposes, this variable can instruct the com
 
 {{File|/etc/portage/make.conf||<pre>
 CFLAGS="-march=native -O2 -pipe -ggdb -frecord-gcc-switches"
-CXXFLAGS="${CFLAGS}"<
-/pre>}}
+CXXFLAGS="${CFLAGS}"
+</pre>}}
 
 For Intel Core i7 cpu users or those having econf error during install, (with the current 2012.1 release of Gentoo which ships with GCC 4.5.3 compiler) it is recommended to begin your install with the -march=core2 CFLAG to generate a base install against GCC 4.5.3, then later you can upgrade GCC to 4.6.3 or newer in order to support the new CFLAG -march=corei7. Below is the recommended setting to begin with for Core i7 users:
 
