Various minor edits

--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -15,7 +15,7 @@ CFLAGS="-march=native -O2 -pipe -ggdb -frecord-gcc-switches"
 CXXFLAGS="${CFLAGS}"
 </pre>}}
 
-For Intel Core i7 cpu users or those having econf error during install, (with the current 2012.1 release of Gentoo which ships with GCC 4.5.3 compiler) it is recommended to begin your install with the -march=core2 CFLAG to generate a base install against GCC 4.5.3, then later you can upgrade GCC to 4.6.3 or newer in order to support the new CFLAG -march=corei7. Below is the recommended setting to begin with for Core i7 users:
+For Intel Core i7 CPU users or those having econf error during install (with the current 2012.1 release of Gentoo which ships with GCC 4.5.3 compiler) it is recommended to begin your install with the -march=core2 flag to generate a base install against GCC 4.5.3, then later you can upgrade GCC to 4.6.3 or newer in order to support the new -march=corei7 flag. Below is the recommended setting to begin with for Core i7 users:
 
 {{File|/etc/portage/make.conf||<pre>
 CFLAGS="-march=core2 -O2 -pipe"
