--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -1,7 +1,6 @@
 {{Stub}}
-The '''CFLAGS''' and '''CXXFLAGS''' variables are passed on to the compiler and contain architecture information, compiler optimizations and logging- and failure levels.
 
-The CFLAGS and CXXFLAGS variables content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, this variable is set in {{Path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses these CFLAGS entries.
+The CFLAGS and CXXFLAGS are environment variables whose content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, these variables are set in {{Path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses them.
 
 {{File|/etc/portage/make.conf||<pre>
 CFLAGS="-march=native -O2 -pipe"
