Added that -O2 is not 2 preceded by zero

--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -2,10 +2,14 @@
 
 The CFLAGS and CXXFLAGS are environment variables whose content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, these variables are set in {{Path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses them.
 
+As an example we specify the CPU architecture (<code>-march=native</code>), the optimization level (<code>-O2</code>) and another useful flag (<code>-pipe</code>) that serves to avoid using temporary files:
+
 {{File|/etc/portage/make.conf||<pre>
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 </pre>}}
+
+Please note that optimization level <code>-O2</code> is 2 preceded by an uppercase "o", not by a zero.
 
 For development and quality control purposes, this variable can instruct the compiler to add debug information to the generated binaries. A typical setting would then be:
 
