--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -2,12 +2,17 @@
 
 The CFLAGS and CXXFLAGS are environment variables whose content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, these variables are set in {{Path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses them.
 
-As an example we specify the CPU architecture (<code>-march=native</code>), the optimization level (<code>-O2</code>) and another useful flag (<code>-pipe</code>) that serves to avoid using temporary files:
+For example:
 
 {{File|/etc/portage/make.conf||<pre>
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 </pre>}}
+
+A short explanation:
+* ''-march=native'': this tells GCC to automatically detect the CPU architecture to use instead of manually specifying one
+* ''-O2'': this tells GCC to optimize the code it produces
+* ''-pipe'': this speeds up the compilation process in that temporary files are not used for the various compilation stages
 
 Please note that optimization level <code>-O2</code> is 2 preceded by an uppercase "o", not by a zero.
 
