--- a/Council_decisions.mw
+++ b/Council_decisions.mw
@@ -1,12 +1,10 @@
 This page intends to provide a quick summary of all decisions which were done by the Council. It should only list general directions and avoid unnecessary details; it should also avoid repeating what is described in the PMS.
 
 == Currently approved EAPIs ==
-
 * ebuilds: EAPI 4 ([http://www.gentoo.org/proj/en/council/meeting-logs/20110201-summary.txt 02/2011 meeting])
 * profiles: EAPI 1 ([http://www.gentoo.org/proj/en/council/meeting-logs/20111011-summary.txt 10/2011 meeting])
 
 == Decisions ==
-
 * Systems with separate /usr should be supported. However, users shouldn't be constrained from using software which doesn't support that. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20120403-summary.txt 04/2012 meeting]
 * The ChangeLog and commit messages do not need to be the same. However, both messages should be valid. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20111108-summary.txt 11/2011 meeting]
 * When removing functions or changing API of an eclass, developers should ensure that it doesn't break any ebuilds in the tree and send a notice to gentoo-dev 30 days in advance. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20111108-summary.txt 11/2011 meeting]
@@ -18,3 +16,5 @@ This page intends to provide a quick summary of all decisions which were done by
 * The ebuild tree must provide an upgrade path to a stable system that hasn't been updated for one year. -- [http://www.gentoo.org/proj/en/council/meeting-logs/20091109-summary.txt 11/2009 meeting]
 
 <!-- note: I have reviewed the summaries up to 07/2008, you can start from there -->
+
+[[Category:Project and Community]]
