choice of impls

--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -5,3 +5,17 @@
 The ''-r1'' eclass branch consists of the following eclasses:
 * python-r1 — general-use Python package eclass,
 * distutils-r1 — distutils build system wrapper.
+
+== Information for users ==
+
+=== Choice of Python implementations ===
+The main difference for users is the way that Python implementations for packages being built are selected.
+
+In python.eclass, the implementations to be built can be selected using custom ''USE_PYTHON'' variable in ''make.conf''. If unset, the implementation currently selected using ''eselect python'' is used.
+
+In python-r1 (and python-distutils-ng) the implementation is controlled using USE_EXPAND variable ''PYTHON_TARGETS''. If unset, the Gentoo-wide default is used (currently it is Python 2.7).
+
+The enabled implementation can be set like the following:
+{{Code|Example PYTHON_TARGETS setup in make.conf|<pre>
+PYTHON_TARGETS="python2_7 python3_2"
+</pre>}}
