Uses for eclasses

--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -19,3 +19,15 @@ The enabled implementation can be set like the following:
 {{Code|Example PYTHON_TARGETS setup in make.conf|<pre>
 PYTHON_TARGETS="python2_7 python3_2"
 </pre>}}
+
+== Information for ebuild developers ==
+
+=== Uses for eclasses ===
+
+The ''distutils-r1'' eclass should be used:
+* in Python packages which use the distutils build system,
+* in Python packages which use another build system which works similarly to distutils (respects EPYTHON, installs scripts with correct shebang).
+
+The ''python-r1'' eclass should be used:
+* in packages with optional Python parts,
+* in Python packages which use a build system for which distutils-r1 is not suitable.
