/* Uses for eclasses */ feature table

--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -31,3 +31,18 @@ The ''distutils-r1'' eclass should be used:
 The ''python-r1'' eclass should be used:
 * in packages with optional Python parts,
 * in Python packages which use a build system for which distutils-r1 is not suitable.
+
+The main features of the eclasses are listed in the following table:
+
+{| class="wikitable" style="text-align: center"
+!
+! python-r1
+! distutils-r1
+|-
+| Python implementation USE flags ||colspan=2| <tt>IUSE</tt> & <tt>REQUIRED_USE</tt>
+|-
+| Python dependency || optional || always
+|-
+| Phase functions || none || <tt>src_prepare</tt>, <tt>src_configure</tt>, <tt>src_compile</tt>, <tt>src_test</tt>, <tt>src_install</tt>
+|-
+|}
