/* Uses for eclasses */ make dep type clearer

--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -41,7 +41,7 @@ The main features of the eclasses are listed in the following table:
 |-
 | Python implementation USE flags ||colspan=2| <tt>IUSE</tt> & <tt>REQUIRED_USE</tt>
 |-
-| Python dependency || optional || always
+| Python dependency || on request (<tt>${PYTHON_DEPS}</tt>) || always
 |-
 | Phase functions || none || <tt>src_prepare</tt>, <tt>src_configure</tt>, <tt>src_compile</tt>, <tt>src_test</tt>, <tt>src_install</tt>
 |-
