/* Information for ebuild developers */ a few bits on converting distutils packages

--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -46,3 +46,33 @@ The main features of the eclasses are listed in the following table:
 | Phase functions || none || <tt>src_prepare</tt>, <tt>src_configure</tt>, <tt>src_compile</tt>, <tt>src_test</tt>, <tt>src_install</tt>
 |-
 |}
+
+=== Migrating distutils packages ===
+
+The most common changes needing to be done when migrating ''distutils'' packages to ''distutils-r1'' are:
+
+# replace <tt>PYTHON_DEPEND</tt> & <tt>RESTRICT_PYTHON_ABIS</tt> with <tt>PYTHON_COMPAT</tt> (inclusive list),
+# remove <tt>SUPPORT_PYTHON_ABIS</tt> (always on),
+# replace <tt>PYTHON_USE_WITH</tt> with <tt>PYTHON_REQ_USE</tt> (which follows USE dependency syntax),
+# remove <tt>PYTHON_MODNAME</tt> (not needed),
+# replace manual patching with <tt>PATCHES</tt> array (if desired),
+# remove calls to <tt>epatch_user</tt> (done in <tt>distutils-r1_prepare_all()</tt>),
+# replace <tt>python_execute_function</tt> with appropriate pseudo-phase functions where appropriate (e.g. <tt>python_test()</tt>) or with <tt>python_foreach_impl</tt> elsewhere,
+# replace <tt>DISTUTILS_SRC_TEST</tt> with explicit <tt>python_test()</tt> function.
+
+For example, the following preamble:
+
+{{code|A random distutils preamble|<pre>
+# python eclass cruft
+PYTHON_DEPEND="*:2.6"
+PYTHON_USE_WITH="readline sqlite"
+PYTHON_MODNAME="IPython"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS="2.5 *-jython *-pypy-*"
+</pre>}}
+
+would be replaced by:
+{{code|The equivalent distutils-r1 preamble|<pre>
+PYTHON_COMPAT=( python{2_6,2_7,3_1,3_2} )
+PYTHON_REQ_USE='readline,sqlite'
+</pre>}}
