Added InfoBox todo template

--- a/GNOME%2FGNOME3_Stable.mw
+++ b/GNOME%2FGNOME3_Stable.mw
@@ -1,5 +1,9 @@
 [[Category:GNOME]]
 
+{{InfoBox stack
+|{{InfoBox todo|Expand the [[GNOME/GNOME3 Stable#Regressions|Regressions]] section.}}
+}}
+
 == This is a list of things that are potentially blocking the stabilization of GNOME 3 ==
 
 Please do not add items here if you aren't a Gentoo GNOME team member. However please do add items you believe to be missing from here in the section dedicated for that in the end.
