/* Information for users */ explanation how wrapper works

--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -20,6 +20,32 @@ The enabled implementation can be set like the following:
 PYTHON_TARGETS="python2_7 python3_2"
 </pre>}}
 
+=== Running installed scripts ===
+The Python scripts are installed by distutils-r1 in the following layout:
+
+ /usr/bin/script -> python-exec
+ /usr/bin/script-python2.6
+ /usr/bin/script-python2.7
+ /usr/bin/script-pypy-c1.8
+ /usr/bin/script-jython2.5
+
+The latter scripts are actual Python scripts converted to the format suitable for the appropriate Python interpreter. They can be either run directly or through the correct Python interpreter:
+
+{{Cmd|pypy-c1.8 /usr/bin/script-pypy-c1.8}}
+
+{{Note|Please note that if you use another Python interpreter for the particular script, it may not work at all or fail at a random point.}}
+
+The actual script is replaced by a symlink to the python-exec wrapper. It can be only run directly, and it selects the correct variant and interpreter based on user preferences:
+
+{{Cmd|/usr/bin/script}}
+
+The wrapper will use the first of the following implementations which is supported by the script:
+
+# The implementation specified by the '''EPYTHON''' environment variable,
+# the main system Python interpreter (chosen through ''eselect python''),
+# the alternate system Python interpreter (if the main one was Python 2, the preferred Python 3; if the main one was Python 3, the preferred Python 2),
+# best available Python interpreter supported by the script.
+
 == Information for ebuild developers ==
 
 === Uses for eclasses ===
