/* Migrating distutils packages */ Add a note on checking deps

--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -84,7 +84,9 @@ The most common changes needing to be done when migrating ''distutils'' packages
 # replace manual patching with <tt>PATCHES</tt> array (if desired),
 # remove calls to <tt>epatch_user</tt> (done in <tt>distutils-r1_prepare_all()</tt>),
 # replace <tt>python_execute_function</tt> with appropriate pseudo-phase functions where appropriate (e.g. <tt>python_test()</tt>) or with <tt>python_foreach_impl</tt> elsewhere,
-# replace <tt>DISTUTILS_SRC_TEST</tt> with explicit <tt>python_test()</tt> function.
+# replace <tt>DISTUTILS_SRC_TEST</tt> with explicit <tt>python_test()</tt> function,
+# check package's dependencies for packages using python-r1. If any are found, append <code>[${PYTHON_USEDEP}]</code> to them,
+# check package's ''reverse dependencies'' for packages using python-r1. If any are found, append <code>[${PYTHON_USEDEP}]</code> to their dependency on your package.
 
 For example, the following preamble:
 
