--- a/VMware_Player.mw
+++ b/VMware_Player.mw
@@ -1,4 +1,4 @@
-'''VMware Player''' is a closed source freeware virtualization solution with a feature set similar to [[VirtualBox]] and [[QEMU|KVM]]. Its only significant advantage (which is increasing less relevant) is that unlike VirtualBox and KVM, it can emulate a 64-bit guest without virtualization extensions in the processor (VT-x / AMD-V). Additional features are offered in VMware's enterprise alternative, [[VMware Workstation]] (also installable via Portage).
+'''VMware Player''' is a closed source freeware virtualization solution with a feature set similar to [[VirtualBox]] and [[KVM]]. Its only significant advantage (which is increasing less relevant) is that unlike VirtualBox and KVM, it can emulate a 64-bit guest without virtualization extensions in the processor (VT-x / AMD-V). Additional features are offered in VMware's enterprise alternative, [[VMware Workstation]] (also installable via Portage).
 
 == Installation ==
 {{Package|app-emulation/vmware-player}} like many binaries is frequently not marked stable, so must be unmasked by running, for example:
