/* Configuration */  saves eight chars, but at the price of not necessarily working

--- a/VMware_Player.mw
+++ b/VMware_Player.mw
@@ -13,7 +13,8 @@ As Portage will inform you, it must be configured to use networking:
 Some modules from {{Package|app-emulation/vmware-modules}} must be loaded. Start VMware services and load modules:
 {{RootCmd|/etc/init.d/vmware start}}
 
-Run '''rc-update add vmware''' to optionally have load on boot.
+To optionally have load on boot:
+{{rootCmd|rc-update add vmware defualt}}
 
 Add user to ''vmware'' group:
 {{RootCmd|gpasswd -a YOURUSER vmware}}
