Corrected the amd64 dev channel name.

--- a/Arch_testing_guide.mw
+++ b/Arch_testing_guide.mw
@@ -133,7 +133,7 @@ This is where you report any failures during compilation, test phase or usage. I
 To make things simpler, link reports on both bugzillas. Also don't forget to drop some means of communication, as a developer or maintainer may contact you asking for further tests or logs.
 
 == Not sure? ==
-If you are not sure about anything, feel free to ask an irc (irc.freenode.net) in ''#gentoo-dev channel'' (or sub-channels like ''#gentoo-dev-amd64''...).
+If you are not sure about anything, feel free to ask an irc (irc.freenode.net) in ''#gentoo-dev channel'' (or sub-channels like ''#gentoo-amd64-dev''...).
 {{Warning|Stuff happens, improperly tested package can cause damage to users or gentoo name (be praised). If you think you can't test package, don't do it, eventually some other AT will test it or determine stability by heuristics (dice roll, goat sacrifice... :))}}
 
 == See also ==
