--- a/Python-r1.mw
+++ b/Python-r1.mw
@@ -1,5 +1,4 @@
 {{Lowercase title}}
-
 ''python-r1'' is a new eclass for Python packages. The major goal is to provide a simpler (and more powerful at the same time) replacement for the old ''python.eclass'' which people have significant trouble maintaining.
 
 The ''-r1'' eclass branch consists of the following eclasses:
@@ -104,3 +103,5 @@ would be replaced by:
 PYTHON_COMPAT=( python{2_6,2_7,3_1,3_2} )
 PYTHON_REQ_USE='readline,sqlite'
 </pre>}}
+
+[[Category:Development]]
