Added instructions to find out what 'native' does on a particular CPU. Usefull for getting cache parameters, for example.

--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -13,6 +13,7 @@ A short explanation:
 * ''-march=native'': this tells GCC to automatically detect the CPU architecture to use instead of manually specifying one
 * ''-O2'': this tells GCC to optimize the code it produces
 * ''-pipe'': this speeds up the compilation process in that temporary files are not used for the various compilation stages
+To see what <code>-march=native</code> or <code>-mtune=native</code> enables for your specific CPU, run <code>gcc -march=native -E -v - </dev/null 2>&1 | grep cc1</code>. Simply using this whole output instead of <code>-march=native</code> is not recommended, but cache parameters can be used safely.
 
 Please note that optimization level <code>-O2</code> is 2 preceded by an uppercase "o", not by a zero.
 
@@ -22,6 +23,7 @@ For development and quality control purposes, this variable can instruct the com
 CFLAGS="-march=native -O2 -pipe -ggdb -frecord-gcc-switches"
 CXXFLAGS="${CFLAGS}"
 </pre>}}
+
 
 For Intel Core i7 CPU users or those having econf error during install (with the current 2012.1 release of Gentoo which ships with GCC 4.5.3 compiler) it is recommended to begin your install with the -march=core2 flag to generate a base install against GCC 4.5.3, then later you can upgrade GCC to 4.6.3 or newer in order to support the new -march=corei7 flag. Below is the recommended setting to begin with for Core i7 users:
 
