--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -1,3 +1,5 @@
 This page is a draft.
 
 This page is intended to link or to write down Gnome team policies about its own packages or how packages using Gnome team packages as dependencies should handle some particular aspects.
+
+[[Category:Projects]]
