EAPI 5 can be in stable ebuilds too

--- a/Council_decisions.mw
+++ b/Council_decisions.mw
@@ -1,7 +1,7 @@
 This page intends to provide a quick summary of all decisions which were done by the Council. It should only list general directions and avoid unnecessary details; it should also avoid repeating what is described in the PMS.
 
 == Currently approved EAPIs ==
-* ebuilds: EAPI 4 ([http://www.gentoo.org/proj/en/council/meeting-logs/20110201-summary.txt 02/2011 meeting]), and EAPI 5 for ~arch ([http://www.gentoo.org/proj/en/council/meeting-logs/20121009.txt 10/2012 meeting])
+* ebuilds: EAPI 5 for ~arch ([http://www.gentoo.org/proj/en/council/meeting-logs/20121009.txt 10/2012 meeting]) and for arch ([https://bugs.gentoo.org/show_bug.cgi?id=440852])
 * profiles: EAPI 1 ([http://www.gentoo.org/proj/en/council/meeting-logs/20111011-summary.txt 10/2011 meeting])
 
 == Decisions ==
