--- a/VMware_Player.mw
+++ b/VMware_Player.mw
@@ -2,7 +2,9 @@
 
 == Installation ==
 {{Package|app-emulation/vmware-player}} like many binaries is frequently not marked stable, so must be unmasked by running, for example:
-{{RootCmd|emerge --autounmask-write {{=}}vmware-player-4.0.4.744019-r1 && dispatch-conf && emerge {{=}}vmware-player-4.0.4.744019-r1}}
+{{Emerge|params+=--autounmask-write|{{=}}vmware-player-4.0.4.744019-r1}}
+{{RootCmd|dispatch-conf}}
+{{Emerge|{{=}}vmware-player-4.0.4.744019-r1}}
 
 For more information on unmasking such packages, see [[Knowledge Base:Accepting a keyword for a single package]].
 
@@ -14,7 +16,7 @@ Some modules from {{Package|app-emulation/vmware-modules}} must be loaded. Start
 {{RootCmd|/etc/init.d/vmware start}}
 
 To optionally have load on boot:
-{{rootCmd|rc-update add vmware defualt}}
+{{RootCmd|rc-update add vmware defualt}}
 
 Add user to ''vmware'' group:
 {{RootCmd|gpasswd -a YOURUSER vmware}}
