--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -1,9 +1,7 @@
 {{Stub}}
-
 The CFLAGS and CXXFLAGS are environment variables whose content is passed on to each invocation of '''cc''' (the C compiler, usually '''gcc''') or '''c++''' (the C++ compiler, usually '''g++''') respectively during compile and build phases of software. Within Gentoo, these variables are set in {{Path|/etc/portage/make.conf}} so that each compile job invoked by the package manager uses them.
 
 For example:
-
 {{File|/etc/portage/make.conf||<pre>
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
@@ -24,15 +22,14 @@ CFLAGS="-march=native -O2 -pipe -ggdb -frecord-gcc-switches"
 CXXFLAGS="${CFLAGS}"
 </pre>}}
 
-
 For Intel Core i7 CPU users or those having econf error during install (with the current 2012.1 release of Gentoo which ships with GCC 4.5.3 compiler) it is recommended to begin your install with the -march=core2 flag to generate a base install against GCC 4.5.3, then later you can upgrade GCC to 4.6.3 or newer in order to support the new -march=corei7 flag. Below is the recommended setting to begin with for Core i7 users:
-
 {{File|/etc/portage/make.conf||<pre>
 CFLAGS="-march=core2 -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 </pre>}}
 
 == See also ==
+* [[Save CFLAGS]]
 * [http://www.gentoo.org/doc/en/gcc-optimization.xml Gentoo Compilation Optimization Guide]
 * [http://www.gentoo.org/proj/en/qa/backtraces.xml Gentoo documentation page on backtraces]
 
