/* See also */ Fix typo.

--- a/CFLAGS.mw
+++ b/CFLAGS.mw
@@ -29,7 +29,7 @@ CXXFLAGS="${CFLAGS}"
 </pre>}}
 
 == See also ==
-* [[Save CFLAGS]]
+* [[Safe CFLAGS]]
 * [http://www.gentoo.org/doc/en/gcc-optimization.xml Gentoo Compilation Optimization Guide]
 * [http://www.gentoo.org/proj/en/qa/backtraces.xml Gentoo documentation page on backtraces]
 
