--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -35,7 +35,7 @@ This still leaves a few questions for maintainers to resolve hence the following
 * package is an '''application''' with support for multiple gtk+, maintainer is '''free to select whatever slot''' he desires to support. It is strongly advised to use gtk+-3 if functionality is equivalent. This is to reduce workload of bugs being triggered with one slot but not the other.
 * package is a '''library''' shipping gtk+ based library only, it '''must be slotted'''. Working with upstream on this might be needed for those who do not understand the principles of soname and soversion.
 * package is shipping gtk+ based libraries and gtk+ based utilities. Package '''must be slotted''' and binaries should be suffixed with slot.
-* package is shipping gtk+ based libraries and non-gtk+ based libraries or utilities. Package '''should be split''' or if maintenance cost if too high, USE=gtk and USE=gtk3 is allowed to enable support for gtk+:2 and gtk+:3 respectively. This should concern a minority of packages like avahi, gtk-vnc, spice-gtk, etc.
+* package is shipping gtk+ based libraries and non-gtk+ based libraries or utilities. Package '''should be split''' or if maintenance cost is too high, USE=gtk and USE=gtk3 is allowed to enable support for gtk+:2 and gtk+:3 respectively. This should concern a minority of packages like avahi, gtk-vnc, spice-gtk, etc.
 
 
 Please note that loading a gtk+-3 based library in a gtk+-2 application will fail and crash the application so it is important to properly depend on relevant USE flags and slots.
