Add KDE SC 4.10

--- a/KDE%2Fupgrade.mw
+++ b/KDE%2Fupgrade.mw
@@ -1,8 +1,19 @@
 This page only lists changes, which you need to consider before updating or will break your system.
 
+== KDE SC 4.10 ==
+* [[udisks]]2 is now used instead of udisks1
+* The application menubar can now be moved<ref>http://blog.martin-graesslin.com/blog/2013/01/4-10-feature-presentation-application-menu-in-window-decoration/</ref>:
+** into a global menubar on the top of the screen. Install {{Package|kde-misc/plasma-widget-menubar}}.
+** into a button in the window decoration (Oxygen style only). Install {{Package|x11-misc/appmenu-qt}}.
+
+The go to ''System Settings'' -> ''Application Appearance'' -> ''Style'' -> select ''Oxygen'' -> ''Fine Tuning'' and change the ''Menubar style'' value.
+
 == KDE SC 4.9 ==
 Since this version {{Package|kde-misc/akonadi-google}} is part of {{Package|kdepim-runtime}} and will block the upgrade. To resolve the block uninstall akonadi-google and set the ''google'' USE flag for kdepim-runtime:
 {{Emerge|params+=-C|akonadi-google}}
 {{RootCmd|echo "kde-base/kdepim-runtime google" >> /etc/portage/package.use}}
+
+== References ==
+<references />
 
 [[Category:Upgrades]]
