*Empty MediaWiki Message*

--- a/KDE%2Fupgrade.mw
+++ b/KDE%2Fupgrade.mw
@@ -6,7 +6,7 @@ This page only lists changes, which you need to consider before updating or will
 ** into a global menubar on the top of the screen. Install {{Package|kde-misc/plasma-widget-menubar}}.
 ** into a button in the window decoration (Oxygen style only). Install {{Package|x11-misc/appmenu-qt}}.
 
-The go to ''System Settings'' -> ''Application Appearance'' -> ''Style'' -> select ''Oxygen'' -> ''Fine Tuning'' and change the ''Menubar style'' value.
+: The go to ''System Settings'' -> ''Application Appearance'' -> ''Style'' -> select ''Oxygen'' -> ''Fine Tuning'' and change the ''Menubar style'' value.
 
 == KDE SC 4.9 ==
 Since this version {{Package|kde-misc/akonadi-google}} is part of {{Package|kdepim-runtime}} and will block the upgrade. To resolve the block uninstall akonadi-google and set the ''google'' USE flag for kdepim-runtime:
