*Empty MediaWiki Message*

--- a/KDE%2Fupgrade.mw
+++ b/KDE%2Fupgrade.mw
@@ -1,7 +1,8 @@
 This page only lists changes, which you need to consider before updating or will break your system.
 
 == KDE SC 4.10 ==
-* [[udisks]]2 is now used instead of udisks1
+* [[udisks]]2 is now used instead of udisks1.
+* The default database backend for {{Package|app-office/akonadi-server}} is now [[MySQL]].
 * The application menubar can now be moved<ref>http://blog.martin-graesslin.com/blog/2013/01/4-10-feature-presentation-application-menu-in-window-decoration/</ref>:
 ** into a global menubar on the top of the screen. Install {{Package|kde-misc/plasma-widget-menubar}}.
 ** into a button in the window decoration (Oxygen style only). Install {{Package|x11-misc/appmenu-qt}}.
