added reference for akonadi-server default db backend change

--- a/KDE%2Fupgrade.mw
+++ b/KDE%2Fupgrade.mw
@@ -2,7 +2,7 @@ This page only lists changes, which you need to consider before updating or will
 
 == KDE SC 4.10 ==
 * [[udisks]]2 is now used instead of udisks1.
-* The default database backend for {{Package|app-office/akonadi-server}} is now [[MySQL]].
+* The default database backend for {{Package|app-office/akonadi-server}} is now [[MySQL]]<ref>https://bugs.gentoo.org/show_bug.cgi?id=441596</ref>.
 * The application menubar can now be moved<ref>http://blog.martin-graesslin.com/blog/2013/01/4-10-feature-presentation-application-menu-in-window-decoration/</ref>:
 ** into a global menubar on the top of the screen. Install {{Package|kde-misc/plasma-widget-menubar}}.
 ** into a button in the window decoration (Oxygen style only). Install {{Package|x11-misc/appmenu-qt}}.
