Added reminder about USE=ssl policy

--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -43,4 +43,16 @@ Please note that loading a gtk+-3 based library in a gtk+-2 application will fai
 
 Remember:  '''gtk USE flag means gtk+ support, whatever slot is needed by the package using it'''
 
+== ssl ==
+
+This is not a Gnome team policy per see, just a reminder from old discussions on gentoo-dev mailing list.
+
+* in case a package supports SSL or TLS for whatever it does with it, it must present this behind a USE=ssl flag.
+* in case multiple SSL backend library are allowed, they must each be presented by a corresponding USE flag, except for the maintainer chosen default and be enabled only when USE=ssl and USE=${support-lib} is set.
+
+For example, library foo has optional support SSL through gnutls, openssl and nss. It will have IUSE="ssl gnutls nss".
+If user want to enable SSL, he/she will just emerge the package with USE="ssl". If he/she wants SSL support through gnutls, he/she will emerge the package with USE="ssl gnutls".
+
+This policy probably needs updating due to EAPI 4 and 5 features. 
+
 [[Category:Projects]]
