Add notes about EAPI usage

--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -2,6 +2,15 @@ This page is a draft.
 
 This page is intended to link or to write down Gnome team policies about its own packages or how packages using Gnome team packages as dependencies should handle some particular aspects.
 
+== EAPI ==
+
+Gnome team tries to stay up-to-date with regards to best available EAPI. Currently this is '''EAPI 5'''.
+
+Gnome team goal is to have all ebuilds use that EAPI and make best use of its features such as:
+* sublots
+* default configure flags
+* default installed documentation (generally no need to define DOCS)
+
 == gtk-doc ==
 
 gtk-doc is the framework for documenting libraries for developer audience. It provides tools to extract, compile and install documentation from the source code of the library directly. In Gentoo, this used to be handled by USE=doc for all packages using gnome2.eclass however the behavior was not fit to what users expected.
