Add notes about eclass and its variables + typos

--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -4,12 +4,32 @@ This page is intended to link or to write down Gnome team policies about its own
 
 == EAPI ==
 
-Gnome team tries to stay up-to-date with regards to best available EAPI. Currently this is '''EAPI 5'''.
+Gnome team tries to stay up-to-date with regard to the best available EAPI. Currently this is '''EAPI 5'''.
 
 Gnome team goal is to have all ebuilds use that EAPI and make best use of its features such as:
 * sublots
 * default configure flags
 * default installed documentation (generally no need to define DOCS)
+
+== Eclass usage ==
+
+Gnome team provides a wide range a functions through its eclasses. Some people see it as bloat, but this is only the bare minimum to ensure packages using Gnome libraries work fine once installed. The amount of code is only the result of keeping backward compatibility with old systems such as scrollkeeper but there is really nothing to fear from the eclass, much more to get wrong by not using it (not regenerating mime and desktop database being the most common example).
+
+Users of the eclass are, obviously, required to pay attention to eclass changes. Most of the time, if not always, they are announced/reviewed on gentoo-dev mailing list and there is little effort to do to keep up to date.
+
+=== G2CONF and src_configure ===
+
+This variable has a long history. Recently, on gentoo-dev mailing list, someone brought up the issue that most Gnome ebuilds did configure work in pkg_setup instead of src_configure and this caused extra run-time for no reason for binary packages.
+
+In response to that valid concern, the Gnome team updated its policy to always define a src_configure when there is something to configure and '''pass configure switch to gnome2_src_configure function'''. Since G2CONF had no other use than defining configure information in pkg_setup, most of its use if now gone and '''it should be removed from ebuilds'''.
+
+=== GCONF_DEBUG ===
+
+Policy being defined at [https://bugs.gentoo.org/show_bug.cgi?id=270919 bug #270919].
+
+=== GNOME2_LA_PUNT ===
+
+Needs writing, especially with regard to behavior with EAPI=5.
 
 == gtk-doc ==
 
