Add notes about static-libs

--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -84,4 +84,12 @@ If user want to enable SSL, he/she will just emerge the package with USE="ssl". 
 
 This policy probably needs updating due to EAPI 4 and 5 features. 
 
+== static-libs ==
+
+The Gnome team does not try to provide static libraries for all packages. This is not by laziness, this is just because most library being based on gtk+ and gtk+ not being static-linking friendly, this is not something we can have the luxury to spend our time on.
+
+'''We only add support for static libraries on user request.'''
+
+If for some reason your package provides static libraries, you are free to allow building them behind USE=static-libs, which is the current practice across the tree, as long as you can ensure that it does link correctly of makes working executables.
+
 [[Category:Projects]]
