--- a/Gnome_Team_Policies.mw
+++ b/Gnome_Team_Policies.mw
@@ -86,7 +86,7 @@ This policy probably needs updating due to EAPI 4 and 5 features.
 
 == static-libs ==
 
-The Gnome team does not try to provide static libraries for all packages. This is not by laziness, this is just because most library being based on gtk+ and gtk+ not being static-linking friendly, this is not something we can have the luxury to spend our time on.
+The Gnome team does not try to provide static libraries for all packages. This is not by laziness, this is just because most libraries being based on gtk+ and gtk+ not being static-linking friendly, this is not something we can have the luxury to spend our time on.
 
 '''We only add support for static libraries on user request.'''
 
